# Grafika2D

./: .gitignore  CMakeLists.txt  Cargo.toml  main.c
WinAPI-OpenCV-Viewer-CXX/: CMakeLists.txt
WinAPI-WinAPI-Viewer-C/: CMakeLists.txt
WinAPI-WinAPI-Viewer-C/src/: draw.c  main.c
WinAPI-WinAPI-Viewer-C/src/include/: context.h  draw.h
basic drawing/: CMakeLists.txt
basic drawing/drawing_app/: CMakeLists.txt
basic drawing/drawing_app/src/: context.c  drawable_area.c  loader.c  main_container.c  side_menu.c  user_input_container.c  window.c
basic drawing/drawio/: CMakeLists.txt
basic drawing/drawio/src/: cairo.c
basic drawing/shapes/: CMakeLists.txt
basic drawing/shapes/include/shapes/: shapeLines.h  shapes.h
basic drawing/shapes/include/shapes/circle/: circle.h
basic drawing/shapes/include/shapes/line/: line.h
basic drawing/shapes/include/shapes/quadrilateral/: quadrilateral.h
basic drawing/shapes/include/shapes/rectangle/: rectangle.h
basic drawing/shapes/include/shapes/shape/: shape.h
basic drawing/shapes/src/: circle.c  line.c  point.c  quadrilateral.c  rectangle.c  shapeLines.c
basic drawing/src/: main.c
bezier/: Readme.md
bezier/src/: main.rs
bezier/src/bezier/: point.rs
c/: CMakeLists.txt
color converter/: .gitignore  Readme.MD
color converter/c/: main.c
color converter/c/color_converter/: CMakeLists.txt
color converter/c/gtk-ui/: CMakeLists.txt
color converter/c/gtk-ui/include/color_ui/internal/: colors_context.h  rgb_container.h
color converter/c/gtk-ui/src/: app.c
color converter/c/gtk-ui/src/internal/: rgb_container.c
color converter/c/shared/: CMakeLists.txt
color converter/rust/: Cargo.toml
cxx-gtk-opencv/: CMakeLists.txt
drawing_app/: CMakeLists.txt
drawing_app/include/drawing_app/: context.h  window.h  window_state.h
drawing_app/include/drawing_app/context/: context.h  internal_context.h
drawing_app/include/drawing_app/state/: drawing_state.h  moving_point_state.h  moving_shape_state.h  no_action_state.h  state.h
drawing_app/include/drawing_app/widgets/: drawable_area.h  main_container.h  side_menu.h
drawing_app/src/: context.c  drawable_area.c  internal_context.c  loader.c  main_container.c  side_menu.c  user_input_container.c  window.c  window_state.c
drawing_app/src/state/: drawing_state.c  moving_point_state.c  moving_shape_mouse_state.c  moving_shape_state.c  no_action_state.c  state.c
drawio/include/drawio/: cairo.h  draw_methods.h
drawio/src/: cairo.c  draw.c  draw_methods.c
grass detector/: cli.py  color_detector.py  main.py  requirements.txt
gtk-ui/: CMakeLists.txt
gtk-ui/include/color_ui/: app.h
gtk-ui/src/internal/: cmyk_container.c  color_container.c  colors_context.c  rgb_container.c  uint8_picker.c  window.c
image loader random/: CMakeLists.txt  Readme.md
image loader random/WinAPI-OpenCV-Viewer-CXX/: CMakeLists.txt
image loader random/WinAPI-OpenCV-Viewer-CXX/src/: win-main.cpp
image loader random/WinAPI-WinAPI-Viewer-C/: CMakeLists.txt
image loader random/WinAPI-WinAPI-Viewer-C/src/: context.c  draw.c  main.c
image loader random/cxx-gtk-opencv/: CMakeLists.txt
image loader random/cxx-gtk-opencv/src/: win-main.cpp
image loader random/image_filters/src/: filters.c
image loader random/image_gui_gtk/src/: window.cpp
image operations/: Cargo.toml  Readme.md
image operations/src/: context.rs  main.rs
image operations/src/channels/: mod.rs
image operations/src/containers/: actions_container.rs  binarization_container.rs  filter_container.rs  histogram_container.rs  main_container.rs  mod.rs  operations_container.rs
image operations/src/filters/: mod.rs
image operations/src/histogram/: mod.rs
image operations/src/image/: mod.rs
image_adapter/: CMakeLists.txt  imageLoader.cpp  imageSaver.cpp
image_adapter/include/image_adapter/: imageSaver.hpp
image_filters/: CMakeLists.txt
image_filters/include/image_filters/: filters.h
image_filters/src/: filters.c  operations.c
image_gui_gtk/: CMakeLists.txt
image_gui_gtk/include/image_gui_gtk/: ImageWrapper.hpp  app.h  app.hpp  image_container.hpp  window.hpp
image_gui_gtk/src/: ImageWrapper.cpp  app.c  app.cpp  image_container.cpp  window.cpp
image_viewer_openCV/: CMakeLists.txt  imageViewer.cpp
image_viewer_openCV/include/: imageViewer.hpp
include/: cube.h
include/cube_state/: cube_context.h  cube_state.h
morfologia/imgops/: library.c
morphology/: Cargo.toml  build.rs
morphology/imgops/: CMakeLists.txt
morphology/src/: main.rs
morphology/src/imgops/: impl.rs
morphology/src/imgops/unsafe/: mod.rs
morphology/src/ui/: buttons_container.rs  context.rs  main_container.rs  mod.rs
netpbm/: CMakeLists.txt
netpbm/src/: PixMap.c  PixMap3.c  PixMap6.c  PixMapReader.c
polygon/: Cargo.toml  Readme.md
polygon/rust/: Cargo.toml
polygon/src/: main.rs
ppm loader/: Readme.md
ppm loader/image_adapter/: CMakeLists.txt  imageSaver.cpp  imageViewer.cpp
ppm loader/netpbm/: CMakeLists.txt
ppm loader/src/: win-main.cpp
rgb cube/: CMakeLists.txt  Readme.md
rgb cube/include/: cube.h  headers.h
rgb cube/src/: main.c
rust/src/: color.rs  color_cmyk.rs  color_rgb.rs
shapes/: CMakeLists.txt
shapes/include/shapes/: point.h  shape.h  shapeLines.h  shapes.h
shapes/include/shapes/line/: line.h
shapes/include/shapes/point/: point.h
shapes/include/shapes/rectangle/: rectangle.h
shapes/include/shapes/shape/: shape.h
shapes/src/: circle.c  line.c  point.c  rectangle.c  shapeLines.c  shapes.c
src/: context.c  context.cpp  context.rs  cube.c  draw.c  draw.cpp  drawing_area.rs  main.c  main.cpp  main.rs  unix-main.cpp  win-main.cpp  window.c
src/bezier/: mod.rs  point.rs
src/binarization/: mod.rs
src/containers/: actions_container.rs  binarization_container.rs  filter_container.rs  main_container.rs  mod.rs  operations_container.rs
src/cube_state/: cube_context.c  cube_state.c
src/filters/: mod.rs
src/histogram/: mod.rs
src/include/: context.h  context.hpp  draw.h  draw.hpp
src/operations/: mod.rs
src/scale_container/: mod.rs
(+78 files in other folders)
