[package]
name = "grafika_morfologia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_8"] }
opencv = "0.88.1"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
cmake = "0.1.50"